--- a/home.html
+++ b/home.html
@@ -85,8 +85,11 @@
                             </div><div class="work-item grid__item lap--one-half desk--one-half">
                                 <div class="info"><a href="userman.html" class="hit">
                                     <div class="vert-center">
-                                        <h2>User Management</h2>
+                                        <h2>User Management</h2>  
+                                        <p></p>
+                                        <h2>Administration</h2>
                                     </div>
+                                     <p></p>
                                     <span class="link">Click Here</span>
                                     </a>
                                 </div>
@@ -95,7 +98,10 @@
                             <div class="info"><a href="processman.html" class="hit">
                                 <div class="vert-center">
                                     <h2>Process Management</h2>
+                                    <p></p>
+                                    <h2>Administration</h2>
                                 </div>
+                                <p></p>
                                 <span class="link">Click Here</span>
                                 </a>
                                 </div>
