--- a/locate.html
+++ b/locate.html
@@ -66,29 +66,10 @@
                 <div class="navbar-offcanvas offcanvas collapse navbar-collapse" id="navmenus">
                     <ul class="nav navbar-nav">
                         <li class="dropdown  ">
-                            <a href="locate.html">Locate Parts</a>
+                            <a href="home.html">HOME</a>
                             <ul class="dropdown-menu">
                                 <li class="current-page-item mobile-nav mobile-nav dropdown">
-                                    <a href="locate.html">Locate Parts</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown  ">
-                            <a href="#" class="at-drop-down">Administration</a>
-                            <ul class="dropdown-menu">
-                                <li class="dropdown-submenu " >
-                                    <a href="userman.html">User Management</a>
-                                </li>
-                                <li class="dropdown-submenu " >
-                                    <a href="processman.html">Process Management</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="dropdown  ">
-                            <a href="guide.pdf" class="at-drop-down">User Guide</a>
-                            <ul class="dropdown-menu">
-                                <li class="current-page-item mobile-nav mobile-nav dropdown">
-                                    <a href ="guide.pdf">User Guide</a>
+                                    <a href="home.html">HOME</a>
                                 </li>
                             </ul>
                         </li>
