--- a/parts.html
+++ b/parts.html
@@ -29,6 +29,8 @@
         <script src='js/smb/jquery.maphilight.min.js'></script>
         <script src='js/smb/jBox.js'></script>
         <script type='text/javascript' src='js/smb/resize.js'></script>
+     <!-- For clicking table-->
+        <script src="js/clicktable.js"></script>
     </head>
     <body>
         <div id="header" class='hidden-xs'>
@@ -102,7 +104,7 @@
                                 <div class='page-content' id='content'>
                                     <div class='align-row '>
                                         <div class='col-md-12'>
-                                            <table class="pg1" style="width: 100%">
+                                            <table class="pg1" id="tablep" style="width: 100%">
                                                 <tbody>
                                                     <tr style="color: #ffffff;background-color: #81817f">
                                                         <th style="width: 410px;height: 24px;text-align: center">Part ID</th>
