--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 			<div class="login100-more" style="background-image: url('images/bp_sembcorp_marine.jpg');">
             </div>
 
-			<div class="wrap-login100 p-l-50 p-r-50 p-t-72 p-b-50">
+			<div class="wrap-login100 p-l-50 p-r-50 p-t-200 p-b-50">
 				<form class="login100-form validate-form">
-					<span class="login100-form-title p-b-59">
+					<span class="login100-form-title p-b-89">
 						   LOGIN
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate="Username is required">
-						<span class="label-input100">UserName</span>
-						<input class="input100" type="text" name="Username" placeholder="UserName...">
+						<span class="label-input100">User Name</span>
+						<input class="input100" type="text" name="Username" placeholder="User Name...">
 						<span class="focus-input100"></span>
 					</div>
 
@@ -59,7 +59,7 @@
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
 							<button class="login100-form-btn" id="submit" type="submit" name="submit" this.value='Sending, please wait...';>
-								Sign Up
+								Login
 							</button>
 						</div>
 					</div>
