--- a/locate.html
+++ b/locate.html
@@ -114,7 +114,7 @@
                                 <fieldset>
                                     <div class="c-form-row c-form-row--stacked c-form-row--primary">
                                         <div class="c-form-row_label">
-                                            <label for="partslocator">Parts Number / Parts ID</label>
+                                            <label for="partslocator">Search By Parts Number / Parts ID</label>
                                         </div>
                                         <div class="row">
                                             <div class="c-form-row_field inline">
@@ -130,7 +130,7 @@
                                     <div class='mt15'></div>
                                     <div class="c-form-row c-form-row--stacked c-form-row--primary">
                                         <div class="c-form-row_label">
-                                            <label for="partslocator">Parts Completion Status</label>
+                                            <label for="partslocator">Search By Parts Completion Status</label>
                                         </div>
                                         <div class="row">
                                             <div class="c-form-row_field inline">
