--- a/locate.html
+++ b/locate.html
@@ -121,7 +121,7 @@
                                                 <input id="parts" class="u-input u-fill-h u-input--l" type="text" name="parts" placeholder="Search for Parts ID ..."/>
                                             </div>
                                             <div class="container-login100-form-btn inline">
-                                                <button type="button" class="btn logins-form-btn" onclick="location.href='map.html'">
+                                                <button type="button" class="btn logins-form-btn" onclick="location.href='partsall.html'">
                                                     <i class="fa fa-search fa-lg"></i>
                                                 </button>
                                             </div>
