--- a/userman.html
+++ b/userman.html
@@ -68,33 +68,51 @@
                 <div class="navbar-offcanvas offcanvas collapse navbar-collapse" id="navmenus">
                     <ul class="nav navbar-nav">
                         <li class="dropdown  ">
-                            <a href="home.html">HOME</a>
+                            <a href="locate.html">Locate Parts</a>
                             <ul class="dropdown-menu">
                                 <li class="current-page-item mobile-nav mobile-nav dropdown">
-                                    <a href="home.html">HOME</a>
+                                    <a href="locate.html">Locate Parts</a>
                                 </li>
                             </ul>
-                        </li>            
+                        </li>
+                        <li class="dropdown  ">
+                            <a href="#" class="at-drop-down">Administration</a>
+                            <ul class="dropdown-menu">
+                                <li class="dropdown-submenu " >
+                                    <a href="userman.html">User Management</a>
+                                </li>
+                                <li class="dropdown-submenu " >
+                                    <a href="processman.html">Process Management</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="dropdown  ">
+                            <a href="guide.pdf" class="at-drop-down">User Guide</a>
+                            <ul class="dropdown-menu">
+                                <li class="current-page-item mobile-nav mobile-nav dropdown">
+                                    <a href ="guide.pdf">User Guide</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="dropdown  ">
+                            <a href="index.html" class="at-drop-down">Sign Out</a>
+                            <ul class="dropdown-menu">
+                                <li class="current-page-item mobile-nav mobile-nav dropdown">
+                                    <a href ="index.html">Sign Out</a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
             <div class="col-md-2 hidden-print hidden-sm hidden-xs"></div>
             <div class="container">
                 <div class="col-md-12">
-                    <div class='col-md-12 hidden-print'>
-                        <div class='breadcrumbs'>
-                            <ul class="list-inline">
-                                <li>
-                                    <a href="#">Administration</a>
-                                </li>
-                                <li class='active'>User Management</li>
-                            </ul>
-                        </div>
-                    </div>
+                 
                     <!-- Content -->
-                    <div class="u-box">
-                        <div class="public-form mlm50">
-
+                    <div class="u-box1">
+                        <div class="public-form1 mlm50">
+                               <h1 class="page-title1 mb10" align="center">User Management</h1>
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr>
