--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate="Username is required">
-						<span class="label-input100">User Name</span>
-						<input class="input100" type="text" name="Username" placeholder="User Name...">
+						<span class="label-input100">Employee Number</span>
+						<input class="input100" type="text" name="EmployeeNumber" placeholder="Employee Number...">
 						<span class="focus-input100"></span>
 					</div>
 
