--- a/partsid.html
+++ b/partsid.html
@@ -100,7 +100,7 @@
                                     <li>
                                         <a href="locate.html">Locate Parts</a>
                                     </li>
-                                    <li class='active'>Map</li>
+                                    <li class='active'> <a href="mapall.html">Map </a></li>
                                     <li class='active'>Part ID PT211-3156-121-11</li>
                                 </ul>
                             </div>
@@ -128,10 +128,10 @@
                                                         <strong>Process Name</strong>
                                                     </td>
                                                     <td style="width: 130px;height: 21px;text-align: center">
-                                                        <strong>User Name</strong>
+                                                        <strong>Employee Name</strong>
                                                     </td>
                                                     <td style="width: 115px;height: 21px;text-align: center">
-                                                        <strong>User ID</strong>
+                                                        <strong>Employee Number</strong>
                                                     </td>
                                                 </tr>
                                             </thead>
