--- a/partsidpr.html
+++ b/partsidpr.html
@@ -128,10 +128,10 @@
                                                         <strong>Process Name</strong>
                                                     </td>
                                                     <td style="width: 130px;height: 21px;text-align: center">
-                                                        <strong>User Name</strong>
+                                                        <strong>Employee Name</strong>
                                                     </td>
                                                     <td style="width: 115px;height: 21px;text-align: center">
-                                                        <strong>User ID</strong>
+                                                        <strong>Employee Number</strong>
                                                     </td>
                                                 </tr>
                                             </thead>
