--- a/parts.html
+++ b/parts.html
@@ -131,18 +131,18 @@
 
                                                         </th>
                                                        <th style="width: 110px;height: 24px;text-align: center">
-                                                            <span></span>User Name
+                                                            <span></span>Employee Name
 
 
 
                                                         </th>
                                                         <th style="width: 120px;height: 24px;text-align: center">
-                                                            <span></span>User ID
+                                                            <span></span>Employee Number
 
 
 
                                                         </th>
-                                                     <th style="width: 280px;height: 24px;text-align: center">
+                                                     <th style="width: 310px;height: 24px;text-align: center">
                                                             <span></span>Date/Time
 
 
@@ -150,7 +150,7 @@
                                                         </th>
                                                     </tr>
                                                     <tr style="height: 24px">
-                                                        <td style="width: 380px;height: 24px;text-align: center">PR243-3456-121-11121</td>
+                                                        <td style="width: 380px;height: 24px;text-align: center">PR243-3456-121-111</td>
                                                         <td style="width: 76px;height: 24px;text-align: center">Cut 1
                                                         </td>
                                                         <td style="width: 130px;height: 24px;text-align: center">X:50;Y:200
@@ -161,7 +161,7 @@
                                                         </td>
                                                         <td style="width: 120px;height: 24px;text-align: center">87678982
                                                         </td>
-                                                        <td style="width: 280px;height: 24px;text-align: center"><span>23/01/2019 09:03:00</span>
+                                                        <td style="width: 310px;height: 24px;text-align: center"><span>23/01/2019 09:03:00</span>
                                                         </td>
                                                     </tr>
                                                     <tr style="height: 24px">
@@ -176,7 +176,7 @@
                                                         </td>
                                                         <td style="width: 120px;height: 24px;text-align: center">88878982
                                                         </td>
-                                                        <td style="width: 280px;height: 24px;text-align: center">23/01/2019 05:03:00
+                                                        <td style="width: 310px;height: 24px;text-align: center">23/01/2019 05:03:00
                                                         </td>
                                                     </tr>
                                                     <tr style="height: 24px">
@@ -191,7 +191,7 @@
                                                         </td>
                                                         <td style="width: 120px;height: 24px;text-align: center">88876982
                                                         </td>
-                                                        <td style="width: 280px;height: 24px;text-align: center">23/01/2019 03:03:00
+                                                        <td style="width: 310px;height: 24px;text-align: center">23/01/2019 03:03:00
                                                         </td>
                                                     </tr>
                                                     <tr style="height: 24px">
@@ -205,7 +205,7 @@
                                                         </td>
                                                         <td style="width: 120px;height: 24px;text-align: center">88878980
                                                         </td>
-                                                        <td style="width: 280px;height: 24px;text-align: center">22/01/2019 17:03:00
+                                                        <td style="width: 310px;height: 24px;text-align: center">22/01/2019 17:03:00
                                                         </td>
                                                     </tr>
                                                     <tr style="height: 24px">
@@ -219,7 +219,7 @@
                                                         </td>
                                                         <td style="width: 120px;height: 24px;text-align: center">00878982
                                                         </td>
-                                                        <td style="width: 280px;height: 24px;text-align: center">22/01/2019 16:03:00
+                                                        <td style="width: 310px;height: 24px;text-align: center">22/01/2019 16:03:00
                                                         </td>
                                                     </tr>
                                                     <tr style="height: 24px">
@@ -233,7 +233,7 @@
                                                         </td>
                                                         <td style="width: 120px;height: 24px;text-align: center">99878982
                                                         </td>
-                                                        <td style="width: 280px;height: 24px;text-align: center">22/01/2019 13:03:00
+                                                        <td style="width: 310px;height: 24px;text-align: center">22/01/2019 13:03:00
                                                         </td>
                                                     </tr>
                                                     <tr style="height: 24px">
@@ -247,7 +247,7 @@
                                                         </td>
                                                         <td style="width: 120px;height: 24px;text-align: center">88878999
                                                         </td>
-                                                        <td style="width: 280px;height: 24px;text-align: center">22/01/2019 10:03:00
+                                                        <td style="width: 310px;height: 24px;text-align: center">22/01/2019 10:03:00
                                                         </td>
                                                     </tr>
                                                 </tbody>
